[tool.poetry]
name = "abquant-data"
version = "0.1.0"
description = "A&B professional platform for quantitative finance. God is asking & bidding Me. ABQ."
authors = ["Jimmy M. Gong <yssource@163.com>"]

packages = [
    { include = "abquant" },
    { include = "abquant/**/*.py" },
]


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pandas = "^1.2.4"
click = "^7.1.2"
Logbook = "^1.5.3"
pytdx = "^1.72"
retrying = "^1.3.3"
simplejson = "^3.17.2"
pymongo = "^3.11.3"
pyarrow = "^4.0.0"

[tool.poetry.dev-dependencies]
conan = "^1.34.0"
black = "^21.5b1"
pytest = "^6.2.4"

[tool.poetry.scripts]
abquant = "abquant.cli:cli"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py37', 'py38']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.pyright]
